[project]
name = "LMM-test-Agno"
version = "0.1.0"
description = "Discovery how to use agno to create workflows to use LLM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.2.10",
    "pandas>=2.3.3",
]
authors = [
    { name = "Natália Keles", email = "keles.natalia@gmail.com" },
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["LLM", "workflow", "agno"]


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "ruff",
    "mypy",
]
